# modern-cmake-cpp-starter-kit

./: CMakeLists.txt  LICENSE  README.md
include/: calc.h
src/: CMakeLists.txt  main.cc
src/ops/: CMakeLists.txt  ln.cc  log.cc  log2.cc  sqrt.cc
test/: CMakeLists.txt  test_ln.cc  test_log.cc  test_log2.cc  test_sqrt.cc
